page rank and random forest tasks descriptions

--- a/Big-data-analysis/graph-based-music-recommender-task-4.ipynb
+++ b/Big-data-analysis/graph-based-music-recommender-task-4.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Graph based Music Recommender. Task 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task description\n",
+    "Data description (DataFrames in parquet format)\n",
+    "Location - /data/sample264\n",
+    "\n",
+    "Fields: trackId, userId, timestamp, artistId\n",
+    "\n",
+    "trackId - id of the track\n",
+    "userId - id of the user\n",
+    "artistId - id of the artist\n",
+    "timestamp - timestamp of the moment the user starts listening to a track\n",
+    "Location - /data/meta\n",
+    "\n",
+    "Fields: type, Name, Artist, Id\n",
+    "\n",
+    "Type could be “track” or “artist”\n",
+    "Name is the title of the track if the type == “track” and the name of the musician or group if the type == “artist”.\n",
+    "Artist states for the creator of the track in case the type == “track” and for the name of the musician or group in case the type == “artist”.\n",
+    "Id - id of the item\n",
+    "Task\n",
+    "Build the edges of the type “artist-track”. Take the amount of times the track HAS BEEN listened by all users as the weight of the edge from the artist’s vertex to the track’s vertex. For each artist take top-100 tracks and normalize weights.\n",
+    "\n",
+    "Sort the resulting Data Frame in descending order by the column norm_count, take top 40 rows, select only the columns “id1”, “id2”, sort them in ascending order this time first by “id1”, then by “id2” and print the columns “id1”, “id2” of the resulting dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -34,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sparkSession = SparkSession.builder.enableHiveSupport().master(\"local [2]\").getOrCreate()\n",
@@ -46,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "window1 = Window.partitionBy('artistId').orderBy(col('count').desc())\n",
@@ -124,21 +163,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
