--- a/Big-data-analysis/graph-based-music-recommender-task-5.ipynb
+++ b/Big-data-analysis/graph-based-music-recommender-task-5.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Graph based Music Recommender. Task 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task description\n",
+    "Data description (DataFrames in parquet format)\n",
+    "Location - /data/sample264\n",
+    "\n",
+    "Fields: trackId, userId, timestamp, artistId\n",
+    "\n",
+    "trackId - id of the track\n",
+    "userId - id of the user\n",
+    "artistId - id of the artist\n",
+    "timestamp - timestamp of the moment the user starts listening to a track\n",
+    "Location - /data/meta\n",
+    "\n",
+    "Fields: type, Name, Artist, Id\n",
+    "\n",
+    "Type could be “track” or “artist”\n",
+    "Name is the title of the track if the type == “track” and the name of the musician or group if the type == “artist”.\n",
+    "Artist states for the creator of the track in case the type == “track” and for the name of the musician or group in case the type == “artist”.\n",
+    "Id - id of the item\n",
+    "Task\n",
+    "Construct balancing function where the edges of the type “user-track” and the edges of the type “user-artist” influence the final recommendations equally.\n",
+    "\n",
+    "For the user with Id 776748 find all the tracks and artists connected to him. Sort founded items first by artist then by name in ascending order, leave only columns ”Artist” and “Name” and print top-40"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -34,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sparkSession = SparkSession.builder.enableHiveSupport().master(\"local [2]\").getOrCreate()\n",
@@ -46,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "window = Window.partitionBy('userId')\n",
@@ -124,21 +163,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
