--- a/Big-data-analysis/graph-based-music-recommender-task-6.ipynb
+++ b/Big-data-analysis/graph-based-music-recommender-task-6.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Graph based Music Recommender. Task 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task description\n",
+    "Data description (DataFrames in parquet format)\n",
+    "Location - /data/sample264\n",
+    "\n",
+    "Fields: trackId, userId, timestamp, artistId\n",
+    "\n",
+    "trackId - id of the track\n",
+    "userId - id of the user\n",
+    "artistId - id of the artist\n",
+    "timestamp - timestamp of the moment the user starts listening to a track\n",
+    "Location - /data/meta\n",
+    "\n",
+    "Fields: type, Name, Artist, Id\n",
+    "\n",
+    "Type could be “track” or “artist”\n",
+    "Name is the title of the track if the type == “track” and the name of the musician or group if the type == “artist”.\n",
+    "Artist states for the creator of the track in case the type == “track” and for the name of the musician or group in case the type == “artist”.\n",
+    "Id - id of the item\n",
+    "Task\n",
+    "For the user with Id 776748 print top-40 recommended tracks. Build music recommendations with the algorithm described in the lesson 3 of the fifth week. Initialize coordinates of vector x_0 corresponding to the user’s vertex and vertices from the task 5 with ones and all other coordinates with zeros.\n",
+    "\n",
+    "You should receive a table with 3 collumns: “name”, “artist” and “rank”. Sort the resulting dataframe in descending order by “rank”, select top 40 recommended tracks, select only the columns “name”, “artist” and “rank”, leave 5 digits after the decimal point in “rank” and print the resulting dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -34,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sparkSession = SparkSession.builder.enableHiveSupport().master(\"local [2]\").getOrCreate()\n",
@@ -46,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "userToTrackWindow1 = Window.partitionBy('userId').orderBy(col('count').desc())\n",
@@ -66,7 +105,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "userToTrack2 = userToTrack_tmp.withColumn('norm_count', col('count') / col('sum_count') * 1.0) \\\n",
@@ -76,7 +117,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "userToArtistWindow1 = Window.partitionBy('userId').orderBy(col('count').desc())\n",
@@ -95,7 +138,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "artistToTrackWindow1 = Window.partitionBy('artistId').orderBy(col('count').desc())\n",
@@ -114,7 +159,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data2 = data.select(col('userId').alias('userId'), \n",
@@ -126,7 +173,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "trackToTrackWindow1 = Window.partitionBy('trackId').orderBy(col('count').desc())\n",
@@ -147,7 +196,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "init_vector = userToTrack.union(userToArtist) \\\n",
@@ -163,7 +214,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "edges = userToTrack.union(userToArtist) \\\n",
@@ -175,7 +228,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = init_vector\n",
@@ -194,7 +249,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "reccomendations = x.select(col(\"id1\").alias(\"id\"), col(\"vertex_weight\")) \\\n",
@@ -265,21 +322,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
