--- a/Machine-learning-applications/predict-the-tree-cover-type-using-random-forest.ipynb
+++ b/Machine-learning-applications/predict-the-tree-cover-type-using-random-forest.ipynb
@@ -1,9 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict the tree cover type using Random Forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task description\n",
+    "The dataset represents the data about trees which were planted in the US (https://archive.ics.uci.edu/ml/datasets/covertype). The dataset consists of the information about 500000 trees. Your aim is to build Random Forest Ensemble to predict the cover type of trees. In order to successfully complete this assignment you have to follow this algorithm:\n",
+    "\n",
+    "Load the training data\n",
+    "Transform categorical features into vector representations\n",
+    "Split the dataset into the train and validation part\n",
+    "Fit the Random Forest Ensemble on the training set\n",
+    "Compare accuracy of the fitted model with the Logistic Regression Model, which is about 0.67 for this set\n",
+    "If you have enough time, it will be very interesting to dig into further research through these steps:\n",
+    "\n",
+    "Determine which features are valuable for your model (calculate feature importance of your model).\n",
+    "Try to reduce the number of trees and see the results.\n",
+    "Understand why the linear models have poor performance on this dataset.\n",
+    "Notes\n",
+    "The dataset is located at /data/covertype.\n",
+    "\n",
+    "The test set will be replaced during the testing phase. Do not forget to clear your code and choose the appropriate option in the dropdown menu (Week 4, Random Forest). If you have any questions feel free to report about problems on the course forum.\n",
+    "\n",
+    "The metric for this assignment is MultiClass Accuracy. You have to achieve score higher than 71% on the test dataset in order to get the full score for the assignment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from __future__ import division, print_function, unicode_literals \n",
@@ -19,7 +53,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "spark_session = SparkSession.builder\\\n",
@@ -32,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = spark_session.read.csv(\"/data/covertype2/train.csv\", header=True, inferSchema=True)\n",
@@ -42,7 +80,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "names = ['Elevation', 'Aspect', 'Slope', 'Horizontal_Distance_To_Hydrology', 'Vertical_Distance_To_Hydrology', \n",
@@ -53,7 +93,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wildTypeTransformer = StringIndexer(inputCol=\"Wild_Type\", outputCol=\"Wild_Type_int\")\n",
@@ -74,7 +116,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = pipeline.fit(train)\n",
@@ -116,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
